--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/x-charts": "^8.4.0",
     "@mui/x-data-grid": "^8.4.0",
     "@toolpad/core": "^0.15.0",
+    "axios": "^1.9.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
